Fix various spacing issues

--- a/assets/src/scss/components/_entry-header.scss
+++ b/assets/src/scss/components/_entry-header.scss
@@ -23,12 +23,12 @@
 
 	&::after {
 		top: -50%;
-		right: -409px;
+		right: -415px;
 
 		width: 500px;
 		height: 200%;
 
-		transform: rotate(25deg);
+		transform: rotate(23deg);
 
 		background-color: color(white);
 
