--- a/assets/src/scss/components/_home.scss
+++ b/assets/src/scss/components/_home.scss
@@ -71,7 +71,7 @@
 	width: 100%;
 	height: 500px;
 
-	background-position: center;
+	background-position: 50% 100%;
 	background-size: cover;
 
 	.white-bars {
